# rubber-duck-debugger

./: .coverage  .env.example  .gitignore  .mypy.ini  .pre-commit-config.yaml  .secrets.baseline  README.md  pyproject.toml
.claude/: CLAUDE.md
.claude/commands/: pr-polish.md
.github/: pull_request_template.md
.github/actions/setup-python-uv/: action.yml
.github/workflows/: ci.yml
conf/base/: globals.yml
conf/base/catalog/: catalog_analyst_consensus.yml  catalog_backtest.yml  catalog_company_financials.yml  catalog_company_info.yml  catalog_company_news.yml  catalog_data_ingestion.yml  catalog_earnings_history.yml  catalog_finnhub_company_news.yml  catalog_finnhub_news.yml  catalog_news_analysis.yml  catalog_portfolio_construction.yml  catalog_price_strategies.yml  catalog_stock_prices.yml  catalog_strategies.yml  catalog_valuation_ratios.yml
conf/base/parameters/: params_ai_fundamental_screen.yml  params_ai_fundamental_screen_monthly.yml  params_ai_fundamental_screen_weekly.yml  params_analyst_consensus.yml  params_backtest.yml  params_claude_fundamental.yml  params_company_financials.yml  params_company_info.yml  params_company_news.yml  params_data_ingestion.yml  params_earnings_history.yml  params_finnhub_company_news.yml  params_finnhub_news.yml  params_news_analysis.yml  params_portfolio_construction.yml  params_portfolio_performance.yml  params_price_strategies.yml  params_price_strategies_backtest.yml  params_stock_prices.yml  params_strategies.yml
notebooks/: 01_company_news_eda.ipynb
scripts/: backfill_company_news.py  install_cron.sh  install_launchd.sh  logrotate.conf  run_daily_ingest.sh  run_monthly_news_analysis.sh  run_monthly_strategy.sh  run_weekly_analysis.sh  run_weekly_news_analysis.sh  run_weekly_performance.sh  run_weekly_strategy.sh  send_alert.py  send_report.py  uninstall_cron.sh  uninstall_launchd.sh
src/rdd/: __init__.py  pipeline_registry.py  settings.py
src/rdd/backtest/: engine.py  result.py
src/rdd/datasets/: __init__.py  nullable_json.py  nullable_partitioned.py
src/rdd/hooks/: __init__.py
src/rdd/hooks/pandera/: __init__.py  hook.py  utils.py
src/rdd/pipelines/: __init__.py
src/rdd/pipelines/analyst_consensus/: __init__.py  nodes.py  pipeline.py
src/rdd/pipelines/backtest/: __init__.py  nodes.py  pipeline.py
src/rdd/pipelines/company_financials/: pipeline.py
src/rdd/pipelines/company_info/: __init__.py  nodes.py  pipeline.py
src/rdd/pipelines/company_information/: pipeline.py
src/rdd/pipelines/company_news/: __init__.py  pipeline.py
src/rdd/pipelines/data_ingestion/: __init__.py  nodes.py  pipeline.py
src/rdd/pipelines/earnings_history/: __init__.py  nodes.py  pipeline.py
src/rdd/pipelines/feature_engineering/: __init__.py
src/rdd/pipelines/finnhub_company_news/: __init__.py  nodes.py  pipeline.py
src/rdd/pipelines/finnhub_news/: __init__.py  nodes.py  pipeline.py
src/rdd/pipelines/news_analysis/: __init__.py  nodes.py  pipeline.py
src/rdd/pipelines/portfolio_construction/: __init__.py  nodes.py  pipeline.py
src/rdd/pipelines/strategies/: __init__.py  nodes.py  pipeline.py
src/rdd/pipelines/valuation_ratios/: __init__.py  pipeline.py
src/rdd/schemas/: __init__.py  analyst_consensus.py  company_financials.py  company_info.py  company_news.py  earnings_history.py  enriched_ohlcv.py  finnhub.py  market_news.py  momentum.py  newsapi.py  ohlcv.py  portfolio_holdings.py  signals.py  taxonomy.py  valuation_ratios.py
tests/: conftest.py  test_pipeline_hygiene.py
tests/backtest/: test_engine.py  test_result.py
tests/hooks/pandera/: test_hook.py
tests/pipelines/analyst_consensus/: test_nodes.py
tests/pipelines/company_financials/: test_nodes.py
tests/pipelines/company_info/: test_nodes.py  test_pipeline.py
tests/pipelines/company_information/company_financials/: test_nodes.py
tests/pipelines/company_information/company_info/: test_nodes.py  test_pipeline.py
tests/pipelines/company_information/company_news/: test_nodes.py  test_pipeline.py
tests/pipelines/company_news/: test_nodes.py  test_pipeline.py
tests/pipelines/data_ingestion/: test_nodes.py  test_pipeline.py
tests/pipelines/data_ingestion/analyst_consensus/: test_nodes.py
tests/pipelines/data_ingestion/company_financials/: test_nodes.py
tests/pipelines/data_ingestion/company_info/: test_nodes.py  test_pipeline.py
tests/pipelines/data_ingestion/company_news/: test_nodes.py  test_pipeline.py
tests/pipelines/data_ingestion/earnings_history/: test_nodes.py
tests/pipelines/data_ingestion/stock_prices/: test_nodes.py  test_pipeline.py
tests/pipelines/data_ingestion/valuation_ratios/: test_nodes.py
tests/pipelines/earnings_history/: test_nodes.py
tests/pipelines/feature_engineering/news_analysis/: __init__.py  test_nodes.py
tests/pipelines/feature_engineering/strategies/: __init__.py  (+2 more)
tests/pipelines/finnhub_company_news/: __init__.py  test_nodes.py  test_pipeline.py
tests/pipelines/finnhub_news/: __init__.py  test_nodes.py  test_pipeline.py
tests/pipelines/news_analysis/: test_nodes.py
tests/pipelines/portfolio_construction/: test_nodes.py  test_pipeline.py
tests/pipelines/strategies/: test_nodes.py  test_pipeline.py
tests/pipelines/valuation_ratios/: test_nodes.py
tests/schemas/: test_company_info_schema.py  test_company_news_schema.py  test_market_news_schema.py  test_ohlcv_schema.py  test_signals.py
tests/scripts/: test_run_daily_ingest.py
(+36 files in other folders)
